EthRegulation/reglang/RegLangParser.py
# Generated from d:\OneDrive\OneDrive - pku.edu.cn\Papers\RegLangInterpreter\reglang\RegLang.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class RegLangParser ( Parser ):

    grammarFileName = "RegLang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'knowledgebase'", "'end'", "'knowledge'", 
                     "'='", "';'", "'.'", "'add'", "'del'", "'('", "')'", 
                     "'rule'", "'reg'", "':'", "'require'", "'prohibit'", 
                     "'in'", "'at_least'", "'at_most'", "','", "'any_item'", 
                     "'all_items'", "'length'", "'count'", "'tx'", "'from'", 
                     "'to'", "'function'", "'readset'", "'writeset'", "'args'", 
                     "'contract'", "'name'", "'owner'", "'state'", "'['", 
                     "']'", "'+'", "'-'", "'*'", "'/'", "'%'", "'^'", "'=='", 
                     "'!='", "'<='", "'>='", "'<'", "'>'", "'and'", "'or'", 
                     "'true'", "'false'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "ADD", "SUB", "MUL", "DIV", "MOD", "POW", 
                      "EQ", "NOTEQ", "LESSEQ", "GREATEREQ", "LESS", "GREATER", 
                      "AND", "OR", "TRUE", "FALSE", "LINE_COMMENT", "COMMENT", 
                      "WS", "INT", "DIGIT", "ID", "ID_LETTER", "STRING" ]

    RULE_prog = 0
    RULE_knowledgebaseBlock = 1
    RULE_knowledgeDecl = 2
    RULE_ruleBlock = 3
    RULE_regScopeStmt = 4
    RULE_regRuleStmt = 5
    RULE_logicExpr = 6
    RULE_arithExpr = 7
    RULE_varSymbol = 8
    RULE_number = 9
    RULE_array = 10
    RULE_comparisonOp = 11
    RULE_logicOp = 12
    RULE_boolExpr = 13

    ruleNames =  [ "prog", "knowledgebaseBlock", "knowledgeDecl", "ruleBlock", 
                   "regScopeStmt", "regRuleStmt", "logicExpr", "arithExpr", 
                   "varSymbol", "number", "array", "comparisonOp", "logicOp", 
                   "boolExpr" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    ADD=37
    SUB=38
    MUL=39
    DIV=40
    MOD=41
    POW=42
    EQ=43
    NOTEQ=44
    LESSEQ=45
    GREATEREQ=46
    LESS=47
    GREATER=48
    AND=49
    OR=50
    TRUE=51
    FALSE=52
    LINE_COMMENT=53
    COMMENT=54
    WS=55
    INT=56
    DIGIT=57
    ID=58
    ID_LETTER=59
    STRING=60

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def knowledgebaseBlock(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RegLangParser.KnowledgebaseBlockContext)
            else:
                return self.getTypedRuleContext(RegLangParser.KnowledgebaseBlockContext,i)


        def ruleBlock(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RegLangParser.RuleBlockContext)
            else:
                return self.getTypedRuleContext(RegLangParser.RuleBlockContext,i)


        def getRuleIndex(self):
            return RegLangParser.RULE_prog

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = RegLangParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 32
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==RegLangParser.T__0 or _la==RegLangParser.T__10:
                self.state = 30
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [RegLangParser.T__0]:
                    self.state = 28
                    self.knowledgebaseBlock()
                    pass
                elif token in [RegLangParser.T__10]:
                    self.state = 29
                    self.ruleBlock()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 34
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class KnowledgebaseBlockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(RegLangParser.ID, 0)

        def knowledgeDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RegLangParser.KnowledgeDeclContext)
            else:
                return self.getTypedRuleContext(RegLangParser.KnowledgeDeclContext,i)


        def getRuleIndex(self):
            return RegLangParser.RULE_knowledgebaseBlock

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitKnowledgebaseBlock" ):
                return visitor.visitKnowledgebaseBlock(self)
            else:
                return visitor.visitChildren(self)




    def knowledgebaseBlock(self):

        localctx = RegLangParser.KnowledgebaseBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_knowledgebaseBlock)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 35
            self.match(RegLangParser.T__0)
            self.state = 36
            self.match(RegLangParser.ID)
            self.state = 38 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 37
                self.knowledgeDecl()
                self.state = 40 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==RegLangParser.T__2 or _la==RegLangParser.ID):
                    break

            self.state = 42
            self.match(RegLangParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class KnowledgeDeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return RegLangParser.RULE_knowledgeDecl

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class KnowledgeAssignContext(KnowledgeDeclContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a RegLangParser.KnowledgeDeclContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(RegLangParser.ID, 0)
        def arithExpr(self):
            return self.getTypedRuleContext(RegLangParser.ArithExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitKnowledgeAssign" ):
                return visitor.visitKnowledgeAssign(self)
            else:
                return visitor.visitChildren(self)


    class KnowledgeFuncContext(KnowledgeDeclContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a RegLangParser.KnowledgeDeclContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(RegLangParser.ID, 0)
        def arithExpr(self):
            return self.getTypedRuleContext(RegLangParser.ArithExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitKnowledgeFunc" ):
                return visitor.visitKnowledgeFunc(self)
            else:
                return visitor.visitChildren(self)



    def knowledgeDecl(self):

        localctx = RegLangParser.KnowledgeDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_knowledgeDecl)
        self._la = 0 # Token type
        try:
            self.state = 58
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [RegLangParser.T__2]:
                localctx = RegLangParser.KnowledgeAssignContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 44
                self.match(RegLangParser.T__2)
                self.state = 45
                self.match(RegLangParser.ID)
                self.state = 46
                self.match(RegLangParser.T__3)
                self.state = 47
                self.arithExpr(0)
                self.state = 48
                self.match(RegLangParser.T__4)
                pass
            elif token in [RegLangParser.ID]:
                localctx = RegLangParser.KnowledgeFuncContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 50
                self.match(RegLangParser.ID)
                self.state = 51
                self.match(RegLangParser.T__5)
                self.state = 52
                localctx.op = self._input.LT(1)
                _la = self._input.LA(1)
                if not(_la==RegLangParser.T__6 or _la==RegLangParser.T__7):
                    localctx.op = self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 53
                self.match(RegLangParser.T__8)
                self.state = 54
                self.arithExpr(0)
                self.state = 55
                self.match(RegLangParser.T__9)
                self.state = 56
                self.match(RegLangParser.T__4)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RuleBlockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(RegLangParser.ID, 0)

        def regScopeStmt(self):
            return self.getTypedRuleContext(RegLangParser.RegScopeStmtContext,0)


        def regRuleStmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RegLangParser.RegRuleStmtContext)
            else:
                return self.getTypedRuleContext(RegLangParser.RegRuleStmtContext,i)


        def getRuleIndex(self):
            return RegLangParser.RULE_ruleBlock

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRuleBlock" ):
                return visitor.visitRuleBlock(self)
            else:
                return visitor.visitChildren(self)




    def ruleBlock(self):

        localctx = RegLangParser.RuleBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_ruleBlock)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            self.match(RegLangParser.T__10)
            self.state = 61
            self.match(RegLangParser.ID)
            self.state = 62
            self.regScopeStmt()
            self.state = 66
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==RegLangParser.T__13 or _la==RegLangParser.T__14:
                self.state = 63
                self.regRuleStmt()
                self.state = 68
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 69
            self.match(RegLangParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RegScopeStmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def logicExpr(self):
            return self.getTypedRuleContext(RegLangParser.LogicExprContext,0)


        def getRuleIndex(self):
            return RegLangParser.RULE_regScopeStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRegScopeStmt" ):
                return visitor.visitRegScopeStmt(self)
            else:
                return visitor.visitChildren(self)




    def regScopeStmt(self):

        localctx = RegLangParser.RegScopeStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_regScopeStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self.match(RegLangParser.T__11)
            self.state = 72
            self.logicExpr(0)
            self.state = 73
            self.match(RegLangParser.T__12)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RegRuleStmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return RegLangParser.RULE_regRuleStmt

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class RequireRegContext(RegRuleStmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a RegLangParser.RegRuleStmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def logicExpr(self):
            return self.getTypedRuleContext(RegLangParser.LogicExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRequireReg" ):
                return visitor.visitRequireReg(self)
            else:
                return visitor.visitChildren(self)


    class ProhibitRegContext(RegRuleStmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a RegLangParser.RegRuleStmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def logicExpr(self):
            return self.getTypedRuleContext(RegLangParser.LogicExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProhibitReg" ):
                return visitor.visitProhibitReg(self)
            else:
                return visitor.visitChildren(self)



    def regRuleStmt(self):

        localctx = RegLangParser.RegRuleStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_regRuleStmt)
        try:
            self.state = 83
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [RegLangParser.T__13]:
                localctx = RegLangParser.RequireRegContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 75
                self.match(RegLangParser.T__13)
                self.state = 76
                self.logicExpr(0)
                self.state = 77
                self.match(RegLangParser.T__4)
                pass
            elif token in [RegLangParser.T__14]:
                localctx = RegLangParser.ProhibitRegContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 79
                self.match(RegLangParser.T__14)
                self.state = 80
                self.logicExpr(0)
                self.state = 81
                self.match(RegLangParser.T__4)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LogicExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return RegLangParser.RULE_logicExpr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class FuncLeastMostContext(LogicExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a RegLangParser.LogicExprContext
            super().__init__(parser)
            self.func = None # Token
            self.copyFrom(ctx)

        def arithExpr(self):
            return self.getTypedRuleContext(RegLangParser.ArithExprContext,0)

        def logicExpr(self):
            return self.getTypedRuleContext(RegLangParser.LogicExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncLeastMost" ):
                return visitor.visitFuncLeastMost(self)
            else:
                return visitor.visitChildren(self)


    class FuncAnyAllItemContext(LogicExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a RegLangParser.LogicExprContext
            super().__init__(parser)
            self.func = None # Token
            self.copyFrom(ctx)

        def logicExpr(self):
            return self.getTypedRuleContext(RegLangParser.LogicExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncAnyAllItem" ):
                return visitor.visitFuncAnyAllItem(self)
            else:
                return visitor.visitChildren(self)


    class InternalFunctionInContext(LogicExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a RegLangParser.LogicExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def arithExpr(self):
            return self.getTypedRuleContext(RegLangParser.ArithExprContext,0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(RegLangParser.ID)
            else:
                return self.getToken(RegLangParser.ID, i)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInternalFunctionIn" ):
                return visitor.visitInternalFunctionIn(self)
            else:
                return visitor.visitChildren(self)


    class ParentheseLogicExprAsLogicExprContext(LogicExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a RegLangParser.LogicExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def logicExpr(self):
            return self.getTypedRuleContext(RegLangParser.LogicExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParentheseLogicExprAsLogicExpr" ):
                return visitor.visitParentheseLogicExprAsLogicExpr(self)
            else:
                return visitor.visitChildren(self)


    class TwoArithExprComparisonContext(LogicExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a RegLangParser.LogicExprContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def arithExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RegLangParser.ArithExprContext)
            else:
                return self.getTypedRuleContext(RegLangParser.ArithExprContext,i)

        def EQ(self):
            return self.getToken(RegLangParser.EQ, 0)
        def NOTEQ(self):
            return self.getToken(RegLangParser.NOTEQ, 0)
        def LESS(self):
            return self.getToken(RegLangParser.LESS, 0)
        def LESSEQ(self):
            return self.getToken(RegLangParser.LESSEQ, 0)
        def GREATER(self):
            return self.getToken(RegLangParser.GREATER, 0)
        def GREATEREQ(self):
            return self.getToken(RegLangParser.GREATEREQ, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTwoArithExprComparison" ):
                return visitor.visitTwoArithExprComparison(self)
            else:
                return visitor.visitChildren(self)


    class TwoCalcLogicExprLogicOperationContext(LogicExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a RegLangParser.LogicExprContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def logicExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RegLangParser.LogicExprContext)
            else:
                return self.getTypedRuleContext(RegLangParser.LogicExprContext,i)

        def AND(self):
            return self.getToken(RegLangParser.AND, 0)
        def OR(self):
            return self.getToken(RegLangParser.OR, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTwoCalcLogicExprLogicOperation" ):
                return visitor.visitTwoCalcLogicExprLogicOperation(self)
            else:
                return visitor.visitChildren(self)


    class BoolExprAsLogicExprContext(LogicExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a RegLangParser.LogicExprContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def TRUE(self):
            return self.getToken(RegLangParser.TRUE, 0)
        def FALSE(self):
            return self.getToken(RegLangParser.FALSE, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBoolExprAsLogicExpr" ):
                return visitor.visitBoolExprAsLogicExpr(self)
            else:
                return visitor.visitChildren(self)



    def logicExpr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = RegLangParser.LogicExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 12
        self.enterRecursionRule(localctx, 12, self.RULE_logicExpr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                localctx = RegLangParser.InternalFunctionInContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 86
                self.arithExpr(0)
                self.state = 87
                self.match(RegLangParser.T__15)
                self.state = 88
                self.match(RegLangParser.T__0)
                self.state = 89
                self.match(RegLangParser.T__8)
                self.state = 90
                self.match(RegLangParser.ID)
                self.state = 91
                self.match(RegLangParser.T__9)
                self.state = 92
                self.match(RegLangParser.T__5)
                self.state = 93
                self.match(RegLangParser.ID)
                pass

            elif la_ == 2:
                localctx = RegLangParser.FuncLeastMostContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 95
                localctx.func = self._input.LT(1)
                _la = self._input.LA(1)
                if not(_la==RegLangParser.T__16 or _la==RegLangParser.T__17):
                    localctx.func = self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 96
                self.match(RegLangParser.T__8)
                self.state = 97
                self.arithExpr(0)
                self.state = 98
                self.match(RegLangParser.T__18)
                self.state = 99
                self.logicExpr(0)
                self.state = 100
                self.match(RegLangParser.T__9)
                pass

            elif la_ == 3:
                localctx = RegLangParser.FuncAnyAllItemContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 102
                localctx.func = self._input.LT(1)
                _la = self._input.LA(1)
                if not(_la==RegLangParser.T__19 or _la==RegLangParser.T__20):
                    localctx.func = self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 103
                self.match(RegLangParser.T__8)
                self.state = 104
                self.logicExpr(0)
                self.state = 105
                self.match(RegLangParser.T__9)
                pass

            elif la_ == 4:
                localctx = RegLangParser.TwoArithExprComparisonContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 107
                self.arithExpr(0)
                self.state = 108
                localctx.op = self._input.LT(1)
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << RegLangParser.EQ) | (1 << RegLangParser.NOTEQ) | (1 << RegLangParser.LESSEQ) | (1 << RegLangParser.GREATEREQ) | (1 << RegLangParser.LESS) | (1 << RegLangParser.GREATER))) != 0)):
                    localctx.op = self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 109
                self.arithExpr(0)
                pass

            elif la_ == 5:
                localctx = RegLangParser.ParentheseLogicExprAsLogicExprContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 111
                self.match(RegLangParser.T__8)
                self.state = 112
                self.logicExpr(0)
                self.state = 113
                self.match(RegLangParser.T__9)
                pass

            elif la_ == 6:
                localctx = RegLangParser.BoolExprAsLogicExprContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 115
                localctx.op = self._input.LT(1)
                _la = self._input.LA(1)
                if not(_la==RegLangParser.TRUE or _la==RegLangParser.FALSE):
                    localctx.op = self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 123
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = RegLangParser.TwoCalcLogicExprLogicOperationContext(self, RegLangParser.LogicExprContext(self, _parentctx, _parentState))
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_logicExpr)
                    self.state = 118
                    if not self.precpred(self._ctx, 3):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                    self.state = 119
                    localctx.op = self._input.LT(1)
                    _la = self._input.LA(1)
                    if not(_la==RegLangParser.AND or _la==RegLangParser.OR):
                        localctx.op = self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 120
                    self.logicExpr(4) 
                self.state = 125
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class ArithExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return RegLangParser.RULE_arithExpr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class StringAsArithExprContext(ArithExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a RegLangParser.ArithExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def STRING(self):
            return self.getToken(RegLangParser.STRING, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStringAsArithExpr" ):
                return visitor.visitStringAsArithExpr(self)
            else:
                return visitor.visitChildren(self)


    class ConstantArrayContext(ArithExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a RegLangParser.ArithExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def array(self):
            return self.getTypedRuleContext(RegLangParser.ArrayContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConstantArray" ):
                return visitor.visitConstantArray(self)
            else:
                return visitor.visitChildren(self)


    class CalcPowContext(ArithExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a RegLangParser.ArithExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def arithExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RegLangParser.ArithExprContext)
            else:
                return self.getTypedRuleContext(RegLangParser.ArithExprContext,i)

        def POW(self):
            return self.getToken(RegLangParser.POW, 0)
